force-app/main/default/objects/MatterContact__c/MatterContact__c.object-meta.xml
<CustomObject>
    <description>Junction object linking Matters and Contacts.</description>
    <label>Matter Contact</label>
    <nameField>
        <displayFormat>MC-{0000000000}</displayFormat>
        <label>Relationship Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Matter Contacts</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>