force-app/main/default/objects/MatterContact__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <description>The contact involved in the Matter.</description>
    <inlineHelpText>The contact involved in the Matter.</inlineHelpText>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Matter Contacts</relationshipLabel>
    <relationshipName>Relationships</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>