force-app/main/default/objects/MatterContact__c/fields/Matter__c.field-meta.xml
<CustomField>
    <fullName>Matter__c</fullName>
    <description>The legal case involving the Contact.</description>
    <inlineHelpText>The legal case involving the Contact.</inlineHelpText>
    <label>Matter</label>
    <referenceTo>Matter__c</referenceTo>
    <relationshipLabel>Matter Contacts</relationshipLabel>
    <relationshipName>Relationships</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>